src/objects/GDP_Reference_Table__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corresponding_AMS_Code__c</fullName>
        <description>Provides mapping between GDS Code in AMS with GDS Code in GDP Reference Table</description>
        <inlineHelpText>Provides mapping between GDS Code in AMS with GDS Code in GDP Reference Table</inlineHelpText>
        <label>Corresponding AMS Code</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Definition__c</fullName>
        <inlineHelpText>Used for tooltip</inlineHelpText>
        <label>Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Displayed_Last__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forces display of badge in last position on the TIDS Application Forms</description>
        <inlineHelpText>Forces display of badge in last position on the TIDS Application Forms</inlineHelpText>
        <label>Is Displayed Last</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID used for Data loading from external system</inlineHelpText>
        <label>System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table__c</fullName>
        <label>Table</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_for_GDP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid for GDP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_for_TIDS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drives visibility of value on TIDS application forms.</description>
        <inlineHelpText>Drives visibility of value on TIDS application forms.</inlineHelpText>
        <label>Valid for TIDS</label>
        <type>Checkbox</type>
    </fields>
    <label>GDP Reference Table</label>
    <listViews>
        <fullName>AIRSYS_GDS</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>Code__c</columns>
        <columns>Corresponding_AMS_Code__c</columns>
        <columns>Valid_for_TIDS__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>System__c</columns>
        <columns>Table__c</columns>
        <columns>System_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System_ID__c</field>
            <operation>startsWith</operation>
            <value>AIRSYS</value>
        </filters>
        <label>08 - AIRSYS - GDS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASSC</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Definition__c</columns>
        <columns>System__c</columns>
        <columns>System_ID__c</columns>
        <columns>Table__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System_ID__c</field>
            <operation>startsWith</operation>
            <value>ASSC</value>
        </filters>
        <label>ASSC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Agency_Principal_Destination</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>Code__c</columns>
        <columns>Valid_for_TIDS__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>System__c</columns>
        <columns>Table__c</columns>
        <columns>System_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>APDEST</value>
        </filters>
        <label>10 - APDEST - Principal Destination</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Airport_table</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Definition__c</columns>
        <columns>System__c</columns>
        <columns>System_ID__c</columns>
        <columns>Table__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>AIRPORT</value>
        </filters>
        <label>Airport table</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>Code__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>System__c</columns>
        <columns>Table__c</columns>
        <columns>System_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>00 - All Tables</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Caterory_Table</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>Code__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>System__c</columns>
        <columns>Table__c</columns>
        <columns>System_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>LOCCAT</value>
        </filters>
        <label>07 - LOCCAT - Location Category</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Class_Table</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>Code__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>System__c</columns>
        <columns>Table__c</columns>
        <columns>System_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>ORGCLASS</value>
        </filters>
        <label>02 - ORGCLASS - Accreditation Class</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FOCUSVALUES</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>Code__c</columns>
        <columns>Valid_for_TIDS__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>System__c</columns>
        <columns>Table__c</columns>
        <columns>System_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>FOCUSVALUES</value>
        </filters>
        <label>000_FOCUSVALUES</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LOCTYP</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>Code__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>System__c</columns>
        <columns>Table__c</columns>
        <columns>System_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>LOCTYP</value>
        </filters>
        <label>04 - LOCTYP - Location Type</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ORGABB</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Definition__c</columns>
        <columns>System__c</columns>
        <columns>System_ID__c</columns>
        <columns>Table__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System_ID__c</field>
            <operation>startsWith</operation>
            <value>ORGABB</value>
        </filters>
        <label>20 - ORGABB - Accredit. Org. Abbrev.</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Preferred_Language_Table</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>System__c</columns>
        <columns>Table__c</columns>
        <columns>Code__c</columns>
        <columns>System_ID__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>PREFLANG</value>
        </filters>
        <label>17-Preferred Language (PREFLANG)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Status_Table</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>Code__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>System__c</columns>
        <columns>Table__c</columns>
        <columns>System_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>STATUS</value>
        </filters>
        <label>01 - STATUS - Accreditation Status</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X03_ACCTYP_Accreditation_Model</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>Code__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>System__c</columns>
        <columns>Table__c</columns>
        <columns>System_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>ACCTYP</value>
        </filters>
        <label>03 - ACCTYP - Accreditation Model</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X05_REMITFREQ_Remittance_Frequency</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>Code__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>System__c</columns>
        <columns>Table__c</columns>
        <columns>System_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>REMITFREQ</value>
        </filters>
        <label>05 - REMITFREQ - Remittance Frequency</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X06_EPSTAT_EasyPay_Status</fullName>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>Code__c</columns>
        <columns>Valid_for_GDP__c</columns>
        <columns>System__c</columns>
        <columns>Table__c</columns>
        <columns>System_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Table__c</field>
            <operation>equals</operation>
            <value>EPSTAT</value>
        </filters>
        <label>06 - EPSTAT - EasyPay Status</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDP References Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>